--- a/public/sendnotification.html
+++ b/public/sendnotification.html
@@ -181,7 +181,7 @@
         <li class="active"><a href="#"><span>📨</span> Send Notification</a></li>
         <li><a href="updatefee.html"><span>💵</span> Update Fee</a></li>
         <li><a href="imposefines.html"><span>💰</span> Impose Fines</a></li>
-        <li><a href="verifynoc.html"><span>🔍</span> Verify NOC</a></li>
+        <li><a href="verifynoc.html"><span>➕</span> Add Student</a></li>
         <li><a href="staffsettings.html"><span>⚙️</span> Settings</a></li>
         <li><a href="privacypolicy.html"><span>📄</span> Privacy Policy</a></li>
       </ul>
