--- a/public/updatefee.html
+++ b/public/updatefee.html
@@ -140,7 +140,7 @@
         <li><a href="sendnotification.html"><span>📨</span> Send Notification</a></li>
         <li class="active"><a href="#"><span>💵</span> Update Fee</a></li>
         <li><a href="imposefines.html"><span>💰</span> Impose Fines</a></li>
-        <li><a href="verifynoc.html"><span>🔍</span> Verify NOC</a></li>
+        <li><a href="verifynoc.html"><span>➕</span> Add Student</a></li>
         <li><a href="staffsettings.html"><span>⚙️</span> Settings</a></li>
         <li><a href="privacypolicy.html"><span>📄</span> Privacy policy</a></li>
       </ul>
