--- a/public/developersforstaff.html
+++ b/public/developersforstaff.html
@@ -225,7 +225,7 @@
     <div class="card">
       <img src="https://i.ibb.co/0pdLY9nG/photo-for-developers-page.jpg" alt="Uday">
       <h3>KADULLA UDAY CHARAN</h3>
-      <p>Technical Head – Full Stack Developer & Data Base administrator</p>
+      <p>Technical Head – Full Stack Development & Data Base Administration</p>
       <p>udaycharankadulla@gmail.com</p>
       <div class="social-links">
         <a href="https://udaycharankadulla.vercel.app/" class="insta" target="_blank">Portfolio</a>
