--- a/public/updaterefno.html
+++ b/public/updaterefno.html
@@ -5,219 +5,226 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Update Fee Payment</title>
   <link rel="icon" href="crrengglogo.png" type="image/png" />
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+<style>
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  body {
+    background-color: #1d1d1d;
+  }
+
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+
+  .container {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: row;
+  }
+
+  .sidebar {
+    width: 270px;
+    background-color: rgb(247, 201, 155);
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    overflow-y: auto;
+    transition: top 0.3s ease-in-out;
+    z-index: 999;
+  }
+
+  .sidebar h2 {
+    margin: 40px 20px 20px 20px;
+    color: black;
+    font-size: 18px;
+    font-weight: bold;
+  }
+
+  .menu {
+    list-style-type: none;
+    padding: 0;
+  }
+
+  .menu li {
+    margin-bottom: 15px;
+  }
+
+  .menu li a {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 16px;
+    color: black;
+    padding: 12px 20px;
+    border-radius: 8px;
+    transition: all 0.3s ease;
+  }
+
+  .menu li a:hover,
+  .menu li.active a {
+    background-color: #d4d4d4;
+    font-weight: bold;
+    transform: translateX(5px);
+    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
+  }
+
+  .logout {
+    background-color: #f09000;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 16px;
+    width: 50%;
+    margin: 20px auto 0;
+    transition: background 0.3s ease;
+  }
+
+  .logout:hover {
+    background-color: #d07900;
+  }
+
+  .main {
+    flex-grow: 1;
+    background-color: white;
+    padding: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    margin-left: 270px;
+  }
+
+  .form {
+    background: linear-gradient(135deg, rgba(54, 169, 225, 0.85), rgba(30, 130, 190, 0.85));
+    padding: 35px;
+    border-radius: 20px;
+    width: 100%;
+    max-width: 600px;
+    color: #fff;
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
+    box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3), 0 6px 8px rgba(0, 0, 0, 0.22);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  .form:hover {
+    transform: scale(1.01);
+    box-shadow: 0 16px 28px rgba(0, 0, 0, 0.35);
+  }
+
+  .form .input-group {
+    margin-bottom: 20px;
+  }
+
+  .form label {
+    font-weight: bold;
+    margin-bottom: 5px;
+    display: block;
+  }
+
+  .form input,
+  .form select {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 8px;
+    margin-top: 6px;
+    background-color: rgba(255, 255, 255, 0.9);
+    color: #000;
+    font-size: 15px;
+    transition: box-shadow 0.3s ease;
+  }
+
+  .form input:focus,
+  .form select:focus {
+    outline: none;
+    box-shadow: 0 0 6px rgba(54, 169, 225, 0.8);
+  }
+
+  .buttons {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 25px;
+  }
+
+  .buttons button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+    width: 100%;
+  }
+
+  .buttons .update {
+    background-color: #4CAF50;
+    color: white;
+  }
+
+  .buttons:hover {
+    transform: scale(1.01);
+    box-shadow: 0 16px 28px rgba(0, 0, 0, 0.35);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  .mobile-toggle {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #1f75cb;
+    color: white;
+    font-size: 24px;
+    padding: 12px 18px;
+    border-radius: 50px;
+    z-index: 9999;
+    cursor: pointer;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  }
+
+  @media (max-width: 768px) {
+    .container {
+      flex-direction: column;
     }
 
-    body {
-      background-color: #1d1d1d;
+    .sidebar {
+      top: -100%;
+      width: 100%;
+      max-height: 90vh;
     }
 
-    a {
-      text-decoration: none;
-      color: inherit;
+    .sidebar.open {
+      top: 0;
     }
 
-.container {
-  min-height: 100vh;
-}
-
-.sidebar {
-  width: 270px;
-  background-color: rgb(247, 201, 155);
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
-
-  position: fixed; /* 🧷 Lock it */
-  top: 0;
-  bottom: 0;
-  left: 0;
-  overflow-y: auto;
-    }
-
-    .sidebar h2 {
-      margin: 40px 20px 20px 20px;
-      color: black;
-      font-size: 18px;
-      font-weight: bold;
-    }
-
-    .menu {
-      list-style-type: none;
-      padding: 0;
-    }
-
-    .menu li {
-      margin-bottom: 15px;
-    }
-
-    .menu li a {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      font-size: 16px;
-      color: black;
-      padding: 12px 20px;
-      border-radius: 8px;
-      transition: all 0.3s ease;
-    }
-
-    .menu li a:hover,
-    .menu li.active a {
-      background-color: #d4d4d4;
-      font-weight: bold;
-      transform: translateX(5px);
-      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
-    }
-
-    .menu li a span {
-      font-size: 18px;
-      transition: transform 0.3s ease;
-    }
-
-    .menu li a:hover span {
-      transform: scale(1.2);
-    }
-
-    .logout {
-      background-color: #f09000;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 20px;
-      cursor: pointer;
-      font-size: 16px;
-      width: 50%;
-      margin: 20px auto 0;
-      transition: background 0.3s ease;
-    }
-
-    .logout:hover {
-      background-color: #d07900;
-    }
-
-.main {
-  flex-grow: 1;
-  background-color: white;
-  padding: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  margin-left: 270px; /* Same as sidebar width */
-}
-
-.form {
-  background: linear-gradient(135deg, rgba(54, 169, 225, 0.85), rgba(30, 130, 190, 0.85));
-  padding: 35px;
-  border-radius: 20px;
-  width: 100%;
-  max-width: 600px;
-  color: #fff;
-  backdrop-filter: blur(8px);
-  -webkit-backdrop-filter: blur(8px);
-  box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3), 0 6px 8px rgba(0, 0, 0, 0.22);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.form:hover {
-  transform: scale(1.01);
-  box-shadow: 0 16px 28px rgba(0, 0, 0, 0.35);
-}
-
-    .form .input-group {
-      margin-bottom: 20px;
-    }
-
-    .form label {
-      font-weight: bold;
-      margin-bottom: 5px;
+    .mobile-toggle {
       display: block;
     }
 
- .form input {
-  width: 100%;
-  padding: 10px;
-  border: none;
-  border-radius: 8px;
-  margin-top: 6px;
-  background-color: rgba(255, 255, 255, 0.9);
-  color: #000;
-  font-size: 15px;
-  transition: box-shadow 0.3s ease;
-}
-
-.form input:focus {
-  outline: none;
-  box-shadow: 0 0 6px rgba(54, 169, 225, 0.8);
-}
-
-
-    .form input[type="number"] {
-      margin-top: 10px;
+    .main {
+      margin-left: 0;
+      padding: 20px;
     }
 
-    .buttons {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 25px;
-    }
-
-    .buttons button {
-      padding: 10px 20px;
-      border: none;
-      border-radius: 5px;
-      font-weight: bold;
-      cursor: pointer;
+    .form {
       width: 100%;
-
+      padding: 25px 15px;
     }
-
-    .buttons .update {
-      background-color: #4CAF50;
-      color: white;
-    }
-     .buttons:hover {
-  transform: scale(1.01);
-  box-shadow: 0 16px 28px rgba(0, 0, 0, 0.35);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-    @media (max-width: 768px) {
-      .container {
-        flex-direction: column;
-      }
-
-      .sidebar {
-        width: 100%;
-      }
-
-      .main {
-        padding: 20px;
-      }
-    }
-
-    .form select {
-  width: 100%;
-  padding: 10px;
-  border: none;
-  border-radius: 8px;
-  margin-top: 6px;
-  background-color: rgba(255, 255, 255, 0.9);
-  color: #000;
-  font-size: 15px;
-  transition: box-shadow 0.3s ease;
-}
-.form select:focus {
-  outline: none;
-  box-shadow: 0 0 6px rgba(54, 169, 225, 0.8);
-}
-
-  </style>
+  }
+</style>
 </head>
 <body>
   <div class="container">
@@ -291,7 +298,7 @@
       </div>
     </div>
   </div>
-
+    <div class="mobile-toggle" onclick="toggleMobileMenu()">☰</div>
 <script>
   const userId = localStorage.getItem("userId");
   document.getElementById("userId").textContent = userId;
@@ -350,6 +357,17 @@ body: JSON.stringify({ userId, payments: paymentData, academic_year: academicYea
     });
   });
 
+    function toggleMobileMenu() {
+    document.querySelector('.sidebar').classList.toggle('open');
+  }
+
+  document.querySelectorAll(".menu li a").forEach(link => {
+    link.addEventListener("click", () => {
+      if (window.innerWidth <= 768) {
+        document.querySelector('.sidebar').classList.remove('open');
+      }
+    });
+  });
   // Logout handler
   function logout() {
     localStorage.removeItem("userId");
