--- a/public/help&feedback.html
+++ b/public/help&feedback.html
@@ -26,6 +26,7 @@
       display: flex;
       height: 100vh;
     }
+
     .sidebar {
       width: 270px;
       background-color: rgb(247, 201, 155);
@@ -33,6 +34,13 @@
       flex-direction: column;
       padding: 20px;
       box-shadow: 2px 0 5px rgba(0,0,0,0.2);
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      overflow-y: auto;
+      transition: top 0.3s ease-in-out;
+      z-index: 999;
     }
 
     .sidebar h2 {
@@ -99,6 +107,7 @@
     .main {
       flex-grow: 1;
       padding: 50px;
+      margin-left: 270px;
     }
 
     .form {
