--- a/public/duhistory.html
+++ b/public/duhistory.html
@@ -185,27 +185,63 @@
       background-color: #c62828;
       transform: translateX(-4px);
     }
+    .mobile-toggle {
+      display: none;
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: #1f75cb;
+      color: white;
+      font-size: 24px;
+      padding: 12px 18px;
+      border-radius: 50px;
+      z-index: 9999;
+      cursor: pointer;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    }
 
     @media (max-width: 768px) {
+
+        .form {
+    overflow-x: auto;
+  }
+
+  table {
+    width: 800px;
+  }
       .container {
         flex-direction: column;
       }
 
       .sidebar {
+        top: -100%;
         width: 100%;
+        max-height: 90vh;
+        position: fixed;
+      }
+
+      .sidebar.open {
+        top: 0;
       }
 
       .main {
+        margin-left: 0 !important;
         padding: 20px;
       }
-    }
 
-    td span {
-  font-size: 14px;
-  color: green;
-  font-weight: bold;
+      .mobile-toggle {
+        display: block;
+      }
+       .form::-webkit-scrollbar {
+  height: 8px;
+}
+.form::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 4px;
 }
 
+    }
   </style>
 </head>
 <body>
@@ -248,7 +284,7 @@
       </div>
     </div>
   </div>
-
+  <div class="mobile-toggle" onclick="toggleMobileMenu()">☰</div>
   <script>
     const userId = localStorage.getItem("userId");
     document.getElementById("userId").textContent = userId;
@@ -308,6 +344,20 @@
         });
       }
     }
+
+     function toggleMobileMenu() {
+      const sidebar = document.querySelector('.sidebar');
+      sidebar.classList.toggle('open');
+    }
+
+    document.querySelectorAll(".menu li a").forEach(link => {
+      link.addEventListener("click", () => {
+        if (window.innerWidth <= 768) {
+          document.querySelector('.sidebar').classList.remove('open');
+        }
+      });
+    });
+
 
 function logout() {
     localStorage.removeItem("userId");
