--- a/public/faq.html
+++ b/public/faq.html
@@ -190,22 +190,55 @@
     }
 
     @media (max-width: 768px) {
-      .container {
-        flex-direction: column;
-      }
+       .mobile-toggle {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #1f75cb;
+    color: white;
+    font-size: 24px;
+    padding: 12px 18px;
+    border-radius: 50px;
+    z-index: 9999;
+    cursor: pointer;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  }
 
-      .sidebar {
-        width: 100%;
-      }
+  @media (max-width: 768px) {
+    .container {
+      flex-direction: column;
+    }
 
-      .content {
-        padding: 20px;
-      }
+    .sidebar {
+      top: -100%;
+      left: 0;
+      width: 100%;
+      max-height: 90vh;
+      position: fixed;
+      transition: top 0.3s ease-in-out;
+      z-index: 1000;
+    }
 
-      .faq-container {
-        width: 100%;
-        padding: 20px;
-      }
+    .sidebar.open {
+      top: 0;
+    }
+
+    .content {
+      margin-left: 0;
+      padding: 20px;
+    }
+
+    .faq-container {
+      padding: 20px;
+    }
+
+    .mobile-toggle {
+      display: block;
+    }
+  }
+      
     }
   </style>
 </head>
@@ -236,7 +269,7 @@
       </div>
     </div>
   </div>
-
+  <div class="mobile-toggle" onclick="toggleMobileMenu()">☰</div>
   <script>
     const questions = [
       "How do I log in to the NOC portal?",
@@ -305,6 +338,20 @@ function logout() {
     }
     window.location.replace("index.html");
   }
+
+         function toggleMobileMenu() {
+    const sidebar = document.querySelector('.sidebar');
+    sidebar.classList.toggle('open');
+  }
+
+  document.querySelectorAll(".menu li a").forEach(link => {
+    link.addEventListener("click", () => {
+      if (window.innerWidth <= 768) {
+        document.querySelector('.sidebar').classList.remove('open');
+      }
+    });
+  });
+
 
     function goBack() {
     window.location.href = "settings.html";
