--- a/public/duhistory.html
+++ b/public/duhistory.html
@@ -6,6 +6,7 @@
   <title>Manage Fee Entries</title>
   <link rel="icon" href="crrengglogo.png" type="image/png" />
   <style>
+  <style>
     * {
       margin: 0;
       padding: 0;
@@ -24,8 +25,9 @@
 
     .container {
       display: flex;
-      height: 100vh;
+      min-height: 100vh;
     }
+
     .sidebar {
       width: 270px;
       background-color: rgb(247, 201, 155);
@@ -33,6 +35,13 @@
       flex-direction: column;
       padding: 20px;
       box-shadow: 2px 0 5px rgba(0,0,0,0.2);
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      overflow-y: auto;
+      transition: top 0.3s ease-in-out;
+      z-index: 999;
     }
 
     .sidebar h2 {
@@ -70,15 +79,6 @@
       box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
     }
 
-    .menu li a span {
-      font-size: 18px;
-      transition: transform 0.3s ease;
-    }
-
-    .menu li a:hover span {
-      transform: scale(1.2);
-    }
-
     .logout {
       background-color: #f09000;
       color: white;
@@ -100,6 +100,7 @@
       flex-grow: 1;
       background-color: white;
       padding: 40px;
+      margin-left: 270px;
       overflow-y: auto;
       display: flex;
       justify-content: center;
@@ -114,7 +115,8 @@
       max-width: 900px;
       color: black;
     }
-           .back-btn {
+
+    .back-btn {
       background: none;
       border: none;
       font-size: 16px;
@@ -135,6 +137,7 @@
     .back-btn span {
       margin-left: 8px;
     }
+
     h2 {
       text-align: center;
       margin-bottom: 20px;
@@ -185,6 +188,13 @@
       background-color: #c62828;
       transform: translateX(-4px);
     }
+
+    td span {
+      font-size: 14px;
+      color: green;
+      font-weight: bold;
+    }
+
     .mobile-toggle {
       display: none;
       position: fixed;
@@ -242,6 +252,7 @@
 }
 
     }
+  </style>
   </style>
 </head>
 <body>
