--- a/public/duhistory.html
+++ b/public/duhistory.html
@@ -5,255 +5,253 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Manage Fee Entries</title>
   <link rel="icon" href="crrengglogo.png" type="image/png" />
-  <style>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
+<style>
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
 
-    body {
-      background-color: #1d1d1d;
-    }
+  body {
+    background-color: #1d1d1d;
+  }
 
-    a {
-      text-decoration: none;
-      color: inherit;
-    }
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
 
-    .container {
-      display: flex;
-      min-height: 100vh;
-    }
+  .container {
+    display: flex;
+    min-height: 100vh;
+  }
 
-    .sidebar {
-      width: 270px;
-      background-color: rgb(247, 201, 155);
-      display: flex;
-      flex-direction: column;
-      padding: 20px;
-      box-shadow: 2px 0 5px rgba(0,0,0,0.2);
-      position: fixed;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      overflow-y: auto;
-      transition: top 0.3s ease-in-out;
-      z-index: 999;
-    }
+  .sidebar {
+    width: 270px;
+    background-color: rgb(247, 201, 155);
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    box-shadow: 2px 0 5px rgba(0,0,0,0.2);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    overflow-y: auto;
+    transition: top 0.3s ease-in-out;
+    z-index: 999;
+  }
 
-    .sidebar h2 {
-      margin: 40px 20px 20px 20px;
-      color: black;
-      font-size: 18px;
-      font-weight: bold;
-    }
+  .sidebar h2 {
+    margin: 40px 20px 20px 20px;
+    color: black;
+    font-size: 18px;
+    font-weight: bold;
+  }
 
-    .menu {
-      list-style-type: none;
-      padding: 0;
-    }
+  .menu {
+    list-style-type: none;
+    padding: 0;
+  }
 
-    .menu li {
-      margin-bottom: 15px;
-    }
+  .menu li {
+    margin-bottom: 15px;
+  }
 
-    .menu li a {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      font-size: 16px;
-      color: black;
-      padding: 12px 20px;
-      border-radius: 8px;
-      transition: all 0.3s ease;
-    }
+  .menu li a {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 16px;
+    color: black;
+    padding: 12px 20px;
+    border-radius: 8px;
+    transition: all 0.3s ease;
+  }
 
-    .menu li a:hover,
-    .menu li.active a {
-      background-color: #d4d4d4;
-      font-weight: bold;
-      transform: translateX(5px);
-      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
-    }
+  .menu li a:hover,
+  .menu li.active a {
+    background-color: #d4d4d4;
+    font-weight: bold;
+    transform: translateX(5px);
+    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
+  }
 
-    .logout {
-      background-color: #f09000;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 20px;
-      cursor: pointer;
-      font-size: 16px;
-      width: 50%;
-      margin: 20px auto 0;
-      transition: background 0.3s ease;
-    }
+  .logout {
+    background-color: #f09000;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 16px;
+    width: 50%;
+    margin: 20px auto 0;
+    transition: background 0.3s ease;
+  }
 
-    .logout:hover {
-      background-color: #d07900;
-    }
+  .logout:hover {
+    background-color: #d07900;
+  }
 
-    .main {
-      flex-grow: 1;
-      background-color: white;
-      padding: 40px;
-      margin-left: 270px;
-      overflow-y: auto;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+  .main {
+    flex-grow: 1;
+    background-color: white;
+    padding: 40px;
+    margin-left: 270px;
+    overflow-y: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-    .form {
-      background-color: #36A9E1;
-      padding: 30px;
-      border-radius: 10px;
-      width: 100%;
-      max-width: 900px;
-      color: black;
-    }
-
-    .back-btn {
-      background: none;
-      border: none;
-      font-size: 16px;
-      font-weight: bold;
-      color: #ffffff;
-      display: inline-flex;
-      align-items: center;
-      margin-bottom: 20px;
-      cursor: pointer;
-      transition: all 0.2s ease;
-    }
-
-    .back-btn:hover {
-      color: #16ff0a;
-      transform: translateX(-4px);
-    }
-
-    .back-btn span {
-      margin-left: 8px;
-    }
-
-    h2 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      background-color: #C5D8E8;
-      border-radius: 10px;
-      overflow: hidden;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      margin-top: 20px;
-      color: black;
-    }
-
-    th, td {
-      padding: 12px;
-      text-align: center;
-      border-bottom: 1px solid #ccc;
-    }
-
-    th {
-      background-color: #1ea1f2;
-      color: white;
-      transition: all 0.2s ease;
-      cursor: pointer;
-    }
-
-    tr:hover {
-      background-color: #f1f1f1;
-      transform: translateX(-4px);
-    }
-
-    .delete-btn {
-      background-color: #e53935;
-      color: white;
-      border: none;
-      padding: 6px 12px;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: all 0.2s ease;
-      display: inline-flex;
-      align-items: center;
-    }
-
-    .delete-btn:hover {
-      background-color: #c62828;
-      transform: translateX(-4px);
-    }
-
-    td span {
-      font-size: 14px;
-      color: green;
-      font-weight: bold;
-    }
-
-    .mobile-toggle {
-      display: none;
-      position: fixed;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      background-color: #1f75cb;
-      color: white;
-      font-size: 24px;
-      padding: 12px 18px;
-      border-radius: 50px;
-      z-index: 9999;
-      cursor: pointer;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-    }
-
-    @media (max-width: 768px) {
-
-        .form {
+  .form {
+    background-color: #36A9E1;
+    padding: 30px;
+    border-radius: 10px;
+    width: 100%;
+    max-width: 900px;
+    color: black;
     overflow-x: auto;
   }
 
-  table {
-    width: 800px;
+  .back-btn {
+    background: none;
+    border: none;
+    font-size: 16px;
+    font-weight: bold;
+    color: #ffffff;
+    display: inline-flex;
+    align-items: center;
+    margin-bottom: 20px;
+    cursor: pointer;
+    transition: all 0.2s ease;
   }
-      .container {
-        flex-direction: column;
-      }
 
-      .sidebar {
-        top: -100%;
-        width: 100%;
-        max-height: 90vh;
-        position: fixed;
-      }
+  .back-btn:hover {
+    color: #16ff0a;
+    transform: translateX(-4px);
+  }
 
-      .sidebar.open {
-        top: 0;
-      }
+  .back-btn span {
+    margin-left: 8px;
+  }
 
-      .main {
-        margin-left: 0 !important;
-        padding: 20px;
-      }
+  h2 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
 
-      .mobile-toggle {
-        display: block;
-      }
-       .form::-webkit-scrollbar {
-  height: 8px;
-}
-.form::-webkit-scrollbar-thumb {
-  background-color: #888;
-  border-radius: 4px;
-}
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    background-color: #C5D8E8;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
+    color: black;
+    min-width: 700px;
+  }
 
+  th, td {
+    padding: 12px;
+    text-align: center;
+    border-bottom: 1px solid #ccc;
+  }
+
+  th {
+    background-color: #1ea1f2;
+    color: white;
+    transition: all 0.2s ease;
+    cursor: pointer;
+  }
+
+  tr:hover {
+    background-color: #f1f1f1;
+    transform: translateX(-4px);
+  }
+
+  .delete-btn {
+    background-color: #e53935;
+    color: white;
+    border: none;
+    padding: 6px 12px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    display: inline-flex;
+    align-items: center;
+  }
+
+  .delete-btn:hover {
+    background-color: #c62828;
+    transform: translateX(-4px);
+  }
+
+  td span {
+    font-size: 14px;
+    color: green;
+    font-weight: bold;
+  }
+
+  .mobile-toggle {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #1f75cb;
+    color: white;
+    font-size: 24px;
+    padding: 12px 18px;
+    border-radius: 50px;
+    z-index: 9999;
+    cursor: pointer;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  }
+
+  @media (max-width: 768px) {
+    .container {
+      flex-direction: column;
     }
-  </style>
-  </style>
+
+    .sidebar {
+      top: -100%;
+      width: 100%;
+      max-height: 90vh;
+      position: fixed;
+    }
+
+    .sidebar.open {
+      top: 0;
+    }
+
+    .main {
+      margin-left: 0 !important;
+      padding: 20px;
+    }
+
+    .mobile-toggle {
+      display: block;
+    }
+
+    table {
+      min-width: 700px;
+    }
+
+    .form::-webkit-scrollbar {
+      height: 6px;
+    }
+
+    .form::-webkit-scrollbar-thumb {
+      background: rgba(0, 0, 0, 0.2);
+      border-radius: 4px;
+    }
+  }
+</style>
+
 </head>
 <body>
   <div class="container">
